@@ -1,3 +1,6 @@
+2003-11-12  Alexandre Pigolkine <pigolkine@gmx.de>
+	* bitmap.c 		copy image funciton added
+	
 2003-11-06  Duncan Mak  <duncan@ximian.com>
 
 	* graphics.c (GdipDrawRectangle): Add call to gdip_pen_setup so
